// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignLabel 1`] = `
<div
  class="wp-components-grid wp-components-form-group css-13x1ydg"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-qu01nr"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
    for="fname"
  >
    First name
  </label>
  <div
    class="wp-components-flex wp-components-base-field wp-components-text-input css-in42v"
    data-g2-c16t="true"
    data-g2-component="TextInputWrapper"
  >
    <input
      autocomplete="off"
      class="css-zn43e4"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="fname"
      spellcheck="false"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-grid wp-components-form-group css-13x1ydg"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-1u4n509"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
    for="fname"
  >
    First name
  </label>
  <div
    class="wp-components-flex wp-components-base-field wp-components-text-input css-in42v"
    data-g2-c16t="true"
    data-g2-component="TextInputWrapper"
  >
    <input
      autocomplete="off"
      class="css-zn43e4"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="fname"
      spellcheck="false"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`props should render label without prop correctly 1`] = `
<div
  class="wp-components-grid wp-components-form-group css-13x1ydg"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-w5ywbe"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
    for="fname"
  />
  <div
    class="wp-components-flex wp-components-base-field wp-components-text-input css-in42v"
    data-g2-c16t="true"
    data-g2-component="TextInputWrapper"
  >
    <input
      autocomplete="off"
      class="css-zn43e4"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="fname"
      spellcheck="false"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
<div
  class="wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-1u4n509"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
    for="fname"
  >
    First name
  </label>
  <div
    class="wp-components-flex wp-components-base-field wp-components-text-input css-in42v"
    data-g2-c16t="true"
    data-g2-component="TextInputWrapper"
  >
    <input
      autocomplete="off"
      class="css-zn43e4"
      data-g2-c16t="true"
      data-g2-component="TextInput"
      id="fname"
      spellcheck="false"
      type="text"
      value=""
    />
  </div>
</div>
`;
